# hamutils

./: CMakeLists.txt
src/: main.cpp
